lab1/Test/L1-A-9-76.output
Error Type B at Line 15
Error Type B at Line 25
