lab1/Test/L1-A-9-76.cmm
float ;
int pD631uqqvIKUagL4 ( struct t4UpNSJx {
  struct jg5yzyxzdswyFJ35MGOf Gpd51sS_3F ;
}rKQq4A4wRcwS , struct {
  struct RDvp _mKBEjSSbE5slDnT81T ;
  struct cFa KHEkjAY2uXE9pXvHsZyk ;
  int o25_cdLSrUse ;
}jpKdGE6D ) {
  struct xIdN6yTmsY Kui , dDeBH = X1_PcXRzGXlPeYzN 
    = SXkG6 || i9QmzFt > oPm + vEnG * - fi916VdbeEMt8 
    ( aW4Ox && ! A_sO9xehfejCDG [ Bgn0XCknDg = dehwt >= 
    mZweCkVqhHG7dp_l - nwdrh / ( _Hxvfeoq3S == Lh02pGbTSMpajGmx 
    [ L || HMUdmc != z ( aL7yyTdXoGGnJ2fgcka , qUj8 < 
    UI * _hH8Kz0QJaM9kvqQ30 ( kBkUtILKK2AGhUcDRD3x <= 
    STc6ICOmvDnx_0uT1DXG + ln6p_ ( dFk 859362029 ) ) ) 
    . Neo75XFhtPCLjhaWfo0 ] / 1890144103.1043733182 - 
    ShKvttOTbyJNG4nZ73m ( ) . LAUW0MiyKvdTyArpvsZP ) ] 
    ) ;
}
int ojooxGSGbefjR , sY8c5 [ 962187754 ] 

;
int ;
int 
int mJ62n ( ) {
  Mxmo8mHiKOQKX ;
  if ( BnApErenbgi ) {
    FxUaaOW ;
    DE5449ar44J7OahCyhjf ;
    qDdad1AafGf8Y ;
    kyGcmUp ;
    gur7 ;
    wGt4gGEeoDgp ;
    RO590i7N7p ;
    if ( wo9pne6 )     mjSwHwy ;
else     if ( J )     if ( sYn )     mR6pSeWLEhSR8e3 
      ;
else     HJsmiMx_RMzDlTiNolKQ ;



  }
  while ( hrNRN67tQI )   return eJZIZIdaz26vJMjiGhhQ 
    ;

}
